--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "predev:next": "node ./scripts/theme.js",
-    "dev:reason": "bsb -clean-world -make-world -w",
+    "dev:rescript": "bsb -clean-world -make-world -w",
     "dev:next": "next dev",
     "prebuild": "node ./scripts/theme.js",
     "build": "bsb -clean-world -make-world && next build",
@@ -14,25 +14,25 @@
     "node": ">=12"
   },
   "dependencies": {
-    "@next/mdx": "^9.5.2",
-    "@zeit/next-css": "^1.0.1",
+    "@next/mdx": "^10.0.3",
     "bs-webapi": "^0.19.1",
     "lazysizes": "^5.2.2",
-    "next": "9.5.4",
+    "next": "10.0.3",
+    "postcss": "^8.2.1",
     "prism-react-renderer": "^1.1.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "reason-react": "^0.9.1",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^1.6.16",
-    "autoprefixer": "^9.8.6",
+    "@mdx-js/loader": "^1.6.22",
+    "autoprefixer": "^10.1.0",
     "babel-plugin-preval": "^5.0.0",
-    "bs-platform": "^8.2.0",
+    "bs-platform": "^8.4.2",
     "chroma-js": "^2.1.0",
     "cssnano": "^4.1.10",
     "next-transpile-modules": "^4.1.0",
-    "webpack": "^4.44.1"
+    "webpack": "^5.10.1"
   }
 }
