--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:rescript": "bsb -clean-world -make-world -w",
+    "dev:rescript": "rescript build -w",
     "dev:next": "next dev",
-    "build": "bsb -clean-world -make-world && next build",
+    "build": "rescript && next build",
     "start": "next start"
   },
   "engines": {
     "node": ">=12"
   },
   "dependencies": {
-    "@next/mdx": "^10.0.3",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.0.1",
+    "@rescript/react": "^0.10.3",
     "bs-webapi": "^0.19.1",
-    "lazysizes": "^5.2.2",
-    "next": "10.0.3",
-    "postcss": "^8.2.1",
-    "prism-react-renderer": "^1.1.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "reason-react": "^0.9.1",
-    "tailwindcss": "^2.0.2"
+    "lazysizes": "^5.3.2",
+    "next": "11.0.1",
+    "postcss": "^8.3.5",
+    "prism-react-renderer": "^1.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
-    "autoprefixer": "^10.1.0",
+    "autoprefixer": "^10.3.1",
     "babel-plugin-preval": "^5.0.0",
-    "bs-platform": "^8.4.2",
-    "cssnano": "^4.1.10",
-    "next-transpile-modules": "^4.1.0",
-    "webpack": "^5.10.1"
+    "cssnano": "^5.0.6",
+    "next-transpile-modules": "8.0.0",
+    "rescript": "^9.1.4",
+    "webpack": "^5.45.1"
   }
 }
