--- a/.gitignore
+++ b/.gitignore
@@ -17,22 +17,18 @@
 
 # misc
 .DS_Store
-.env*
+*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# ReasonML
-bs
-.merlin
-lib/
-*.bs.js
-*.gen.tsx
-.bsb.lock
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-OLD-*
-.tool-versions
-
+# vercel
 .vercel
