--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
-  "name": "davidcalhoun.me",
+  "name": "david-calhoun",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:rescript": "rescript build -w",
-    "dev:next": "next dev",
-    "build": "rescript && next build",
-    "start": "next start"
-  },
-  "engines": {
-    "node": ">=12"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^11.0.1",
-    "@rescript/react": "^0.10.3",
-    "bs-webapi": "^0.19.1",
-    "lazysizes": "^5.3.2",
-    "next": "11.1.1",
-    "postcss": "^8.3.5",
-    "prism-react-renderer": "^1.2.1",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "autoprefixer": "^10.3.1",
-    "babel-plugin-preval": "^5.0.0",
-    "cssnano": "^5.0.6",
-    "next-transpile-modules": "8.0.0",
-    "rescript": "^9.1.4",
-    "webpack": "^5.45.1"
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
