--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "next": "11.1.3",
     "nextra": "^1.1.0",
+    "prism-react-renderer": "^1.2.1",
+    "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.16"
