--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
-    "next": "12.1.0",
+    "next": "^13.0.0",
     "nextra": "^1.1.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.27.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
