--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "npm run build:rss && next build",
     "build:rss": "node ./scripts/generate-rss.js",
+    "format": "prettier --write .",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,6 +27,7 @@
     "gray-matter": "^4.0.3",
     "micromark": "^2.11.4",
     "postcss": "^8.3.8",
+    "prettier": "^2.7.1",
     "rss": "^1.2.2"
   }
 }
