--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@vercel/analytics": "^0.1.3",
     "next": "^13.0.0",
     "nextra": "^1.1.0",
     "prism-react-renderer": "^1.2.1",
