--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.2.1",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/analytics": "^0.1.3",
     "next": "^13.0.0",
