--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.6",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.0.7",
     "gray-matter": "^4.0.3",
     "micromark": "^2.11.4",
     "postcss": "^8.4.20",
