--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "tailwindcss -i ./style.css -o ./dist/style.css --watch",
     "format": "prettier -w .",
     "wp-env": "wp-env"
   },
   "devDependencies": {
     "@prettier/plugin-php": "^0.19.1",
     "@wordpress/env": "^5.4.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4"
   }
 }
